force-app/main/default/objects/Comision__c/Comision__c.object-meta.xml
<CustomObject>
    <label>Comisión</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Nombre de Comisión</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comisiones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>