force-app/main/default/objects/Comision__c/fields/ImporteBonus__c.field-meta.xml
<CustomField>
    <fullName>ImporteBonus__c</fullName>
    <description>Importe bonus aplicable</description>
    <label>Importe bonus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>