force-app/main/default/objects/Comision__c/fields/ImporteComisionExtra__c.field-meta.xml
<CustomField>
    <fullName>ImporteComisionExtra__c</fullName>
    <description>Importe comisiones extra hasta el momento</description>
    <label>Importe Comisión Extra</label>
    <summarizedField>DetalleComision__c.Importe__c</summarizedField>
    <summaryFilterItems>
        <field>DetalleComision__c.Tipo__c</field>
        <operation>equals</operation>
        <value>Extra</value>
    </summaryFilterItems>
    <summaryForeignKey>DetalleComision__c.Comision__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>