force-app/main/default/objects/Comision__c/fields/ImporteEscrituracion__c.field-meta.xml
<CustomField>
    <fullName>ImporteEscrituracion__c</fullName>
    <description>Importe comisiones por Escrituración hasta el momento</description>
    <label>Importe Escrituración</label>
    <summarizedField>DetalleComision__c.ImporteEscrituracion__c</summarizedField>
    <summaryFilterItems>
        <field>DetalleComision__c.Tipo__c</field>
        <operation>equals</operation>
        <value>Fija</value>
    </summaryFilterItems>
    <summaryForeignKey>DetalleComision__c.Comision__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>