force-app/main/default/objects/Comision__c/fields/ImportePosventa__c.field-meta.xml
<CustomField>
    <fullName>ImportePosventa__c</fullName>
    <description>Importe comisiones por Posventa hasta el momento</description>
    <label>Importe Posventa</label>
    <summarizedField>DetalleComision__c.ImportePosventa__c</summarizedField>
    <summaryFilterItems>
        <field>DetalleComision__c.Tipo__c</field>
        <operation>equals</operation>
        <value>Fija</value>
    </summaryFilterItems>
    <summaryForeignKey>DetalleComision__c.Comision__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>