force-app/main/default/objects/Comision__c/fields/ImporteTotalComisionFija__c.field-meta.xml
<CustomField>
    <fullName>ImporteTotalComisionFija__c</fullName>
    <description>Importe comisiones hitos hasta el momento</description>
    <formula>ImporteContrato__c  +  ImporteEscrituracion__c + ImportePosventa__c + ImporteReserva__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe total Comisión fija</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>