force-app/main/default/objects/Comision__c/fields/ImpoteTotal__c.field-meta.xml
<CustomField>
    <fullName>ImpoteTotal__c</fullName>
    <description>Importe total comisiones: hitos, bonus y extras</description>
    <formula>IF( ISBLANK( ImporteBonus__c ), 
IF( ISBLANK(PorcentajeBonus__c ),  ImporteTotalComisionFija__c + ImporteComisionExtra__c ,  ImporteTotalComisionFija__c +( ImporteTotalComisionFija__c * PorcentajeBonus__c ) +  ImporteComisionExtra__c ), ImporteTotalComisionFija__c + ImporteBonus__c + ImporteComisionExtra__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe TOTAL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>