force-app/main/default/objects/Comision__c/fields/Mes__c.field-meta.xml
<CustomField>
    <fullName>Mes__c</fullName>
    <description>Mes al que corresponde la comisión</description>
    <label>Mes</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Meses</valueSetName>
    </valueSet>
</CustomField>