force-app/main/default/objects/Comision__c/fields/PorcentajeBonus__c.field-meta.xml
<CustomField>
    <fullName>PorcentajeBonus__c</fullName>
    <description>% bonus aplicable</description>
    <label>% bonus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>