force-app/main/default/objects/Comision__c/fields/Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Vendedor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Vendedor al que se le concede la comisión</description>
    <label>Vendedor</label>
    <referenceTo>Vendedor__c</referenceTo>
    <relationshipLabel>Comisiones</relationshipLabel>
    <relationshipName>Comisiones</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>