force-app/main/default/objects/Comision__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>Año al que corresponde la comisión</description>
    <label>Año</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Years</valueSetName>
    </valueSet>
</CustomField>