force-app/main/default/objects/Comision__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Vendedor__c</columns>
    <columns>Mes__c</columns>
    <columns>Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>